--- a/.github/actions/test123/action.yml
+++ b/.github/actions/test123/action.yml
@@ -3,6 +3,10 @@ name: composite
 runs:
   using: 'composite'
   steps:
+    - name: Checkout tools repo
+      uses: actions/checkout@v3
+      with:
+        repository: jinujohny94/expense_tracker
     - name : Run UI tests
       run : |
         echo "Hello World "
