--- a/.github/workflows/caller.yaml
+++ b/.github/workflows/caller.yaml
@@ -13,9 +13,16 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment: test
     steps:
       - name: demo workflow job
         run: echo This is a demo start workflow
+      - name: Input 
+        run: |
+          echo "{\"INPUT1\":\"${{ inputs.input1 }}\", 
+          \"INPUT2\":\"${{ inputs.input2 }}\",
+          \"INPUT3\":\"${{ vars.VAR1 }}\",
+          \"INPUT4\":\"${{ vars.VAR2 }}\"}"
 
   job1:
     needs: build
