--- a/.github/workflows/caller.yaml
+++ b/.github/workflows/caller.yaml
@@ -13,16 +13,19 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    environment: test
+    #environment: test
     steps:
       - name: demo workflow job
         run: echo This is a demo start workflow
       - name: Input 
+        env:
+          TEST: ${{ vars.TEST }}
         run: |
           echo "{\"INPUT1\":\"${{ inputs.input1 }}\", 
           \"INPUT2\":\"${{ inputs.input2 }}\",
           \"INPUT3\":\"${{ vars.VAR1 }}\",
-          \"INPUT4\":\"${{ vars.VAR2 }}\"}"
+          \"INPUT4\":\"${{ vars.VAR2 }}\",
+          \"INPUT5":\"${{ env.TEST }}\"}"
 
   job1:
     needs: build
