--- a/.github/workflows/caller.yaml
+++ b/.github/workflows/caller.yaml
@@ -25,7 +25,7 @@ jobs:
           \"INPUT2\":\"${{ inputs.input2 }}\",
           \"INPUT3\":\"${{ vars.VAR1 }}\",
           \"INPUT4\":\"${{ vars.VAR2 }}\",
-          \"INPUT5":\"${{ env.TEST }}\"}"
+          \"INPUT5\":\"${{ env.TEST }}\"}"
 
   job1:
     needs: build
