--- a/.github/workflows/caller.yaml
+++ b/.github/workflows/caller.yaml
@@ -22,12 +22,12 @@ jobs:
         env:
           TEST: ${{ vars.VAR1 }}
           VARS_JSON: ${{ toJSON(vars) }}
-        # run: |
-        #   echo "{\"INPUT1\":\"${{ inputs.input1 }}\", 
-        #   \"INPUT2\":\"${{ inputs.input2 }}\",
-        #   \"INPUT3\":\"${{ vars.VAR1 }}\",
-        #   \"INPUT4\":\"${{ vars.VAR2 }}\",
-        #   \"INPUT5\":\"${{ env.VARS_JSON }}\"}"
+        run: |
+          echo "{\"INPUT1\":\"${{ inputs.input1 }}\", 
+          \"INPUT2\":\"${{ inputs.input2 }}\",
+          \"INPUT3\":\"${{ vars.VAR1 }}\",
+          \"INPUT4\":\"${{ vars.VAR2 }}\",
+          \"INPUT5\":\"${{ env.VARS_JSON }}\"}"
 
   job1:
     needs: build
